--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2022.0.0")
+	set('testcontainersVersion', "1.17.6")
 }
 
 dependencies {
@@ -31,12 +32,17 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+	testImplementation 'org.testcontainers:postgresql'
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
+}
+
+bootRun {
+	systemProperty 'spring.profiles.active', 'testdata'
 }
 
 tasks.named('test') {
