--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
 dependencyManagement {
 	imports {
+		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
