Add bootBuildImage config to catalog service

--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -49,6 +49,11 @@ bootRun {
 	systemProperty 'spring.profiles.active', 'testdata'
 }
 
+bootBuildImage {
+	imageName = "${project.name}"
+	environment = ["BP_JVM_VERSION": "19.*"]
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
