--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -28,6 +28,11 @@ dependencyManagement {
 	}
 }
 
+bootBuildImage {
+	imageName = "${project.name}"
+	environment = ["BP_JVM_VERSION": "19.*"]
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
