--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       BPL_DEBUG_ENABLED: true
       BPL_DEBUG_PORT: 8001
       SPRING_CLOUD_CONFIG_URI: http://config-service:8888
-      SPRING_DATASOURCE_URL: jdbc:postgresql://polar-postgres:5432/exampledb_catalog
+      SPRING_DATASOURCE_URL: jdbc:postgresql://example-postgres:5432/exampledb_catalog
       SPRING_PROFILES_ACTIVE: testdata
 
   order-service:
@@ -32,8 +32,8 @@ services:
       - BPL_DEBUG_PORT=8002
       - POLAR_CATALOG_SERVICE_URI=http://catalog-service:9001
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
-      - SPRING_R2DBC_URL=r2dbc:postgresql://polar-postgres:5432/polardb_order
-      - SPRING_FLYWAY_URL=jdbc:postgresql://polar-postgres:5432/polardb_order
+      - SPRING_R2DBC_URL=r2dbc:postgresql://example-postgres:5432/exampledb_order
+      - SPRING_FLYWAY_URL=jdbc:postgresql://example-postgres:5432/exampledb_order
 
   config-service:
     image: "config-service"
