--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'spring-boot-cloud-native-gradle-java'
 include 'config-service'
 include 'catalog-service'
 include 'order-service'
+include 'edge-service'
