Fix spring data redis config in k8s deployment file of edge service

--- a/edge-service/k8s/deployment.yml
+++ b/edge-service/k8s/deployment.yml
@@ -33,5 +33,5 @@ spec:
               value: http://example-ui
             - name: SPRING_CLOUD_CONFIG_URI
               value: http://config-service
-            - name: SPRING_REDIS_HOST
+            - name: SPRING_DATA_REDIS_HOST
               value: example-redis
