--- a/development/docker/docker-compose.yml
+++ b/development/docker/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   example-postgres:
     image: "postgres:15.1"
     container_name: "example-postgres"
@@ -9,3 +10,12 @@ services:
       POSTGRES_PASSWORD: password
     volumes:
       - ./init/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  example-rabbitmq:
+    image: rabbitmq:3.11.6
+    container_name: example-rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
