--- a/development/docker/docker-compose.yml
+++ b/development/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./init/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   example-rabbitmq:
-    image: rabbitmq:3.11.6
+    image: rabbitmq:3.11.6-management
     container_name: example-rabbitmq
     ports:
       - 5672:5672
